# rss-transmission

./: .gitignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
.github/workflows/: docker.yml
migrations/: 20220330145129_init.down.sql  20220330145129_init.up.sql
src/: config.rs  db.rs  lib.rs  main.rs  runner.rs
templates/: example.toml
