[package]
name = "rss-transmission"
version = "0.1.0"
edition = "2021"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls", "sqlx/runtime-tokio-rustls"]
native-tls = ["reqwest/native-tls", "sqlx/runtime-tokio-native-tls"]

[dependencies]
anyhow = { version = "1.0.56", features = ["std"] }
duration-str = "0.3.9"
futures = "0.3.21"
log = "0.4.16"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.10", default-features = false }
rss = "2.0.0"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.11", features = ["sqlite", "migrate", "macros"] }
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }
toml = "0.5.8"
transmission-rpc = "0.3.6"
